Update GitHub Actions workflow for macOS environment
Signed-off-by: nhx9605 <104252001+nhx100218@users.noreply.github.com>

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,8 +19,33 @@ jobs:
           - platform: 2
             platform_name: ios
     
-    runs-on: J316sAP
+    runs-on: macos-latest
     steps:
+      - run : |
+          brew update
+          brew install llvm ldid
+      - name: Set up Java 8
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '8'
+      - name: Install GNU Make
+        run: |
+          brew update
+          brew install make
+      - uses: MOZGIII/install-ldid-action@v1
+        with:
+            repo: ProcursusTeam/ldid
+            tag: v2.1.5
+      - uses: rlalik/setup-cpp-compiler@v1.2
+        with:
+         compiler: gcc-latest 
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+      - run : |
+              export JAVA_HOME=/Users/runner/hostedtoolcache/Java_Zulu_jdk/8.0.482-8/arm64
+              export PATH=$JAVA_HOME/bin:$PATH
       - name: Remove work folders
         run: |
           echo "before"
@@ -83,6 +108,7 @@ jobs:
         run: |
           export PATH=/opt/homebrew/bin:$PATH
           export SLIMMED=1
+          export BOOTJDK="/Users/runner/hostedtoolcache/Java_Zulu_jdk/8.0.482-8/arm64/bin"
           if [ "${{ matrix.platform_name }}" == "ios" ]; then
             # Build ipa and tipa for iOS
             gmake -j$(sysctl -n hw.ncpu) dsym package PLATFORM=${{ matrix.platform }}
