--- a/Natives/CMakeLists.txt
+++ b/Natives/CMakeLists.txt
@@ -49,6 +49,23 @@ target_link_libraries(awt_xawt
 
 set(CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_LIST_DIR}/resources/Frameworks")
 
+# ----- 添加 TouchController 静态库检测（原作者部分）-----
+# TouchController iOS static library
+# Links to libproxy_server_ios.a (device) or libproxy_server_ios_simulator.a (simulator)
+# Provides JNI interface for touch control communication between Minecraft mod and launcher
+set(TOUCHCONTROLLER_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/TouchController")
+if(EXISTS "${TOUCHCONTROLLER_LIB_DIR}/libproxy_server_ios.a")
+  message(STATUS "Found TouchController device library")
+  set(TOUCHCONTROLLER_LIB "${TOUCHCONTROLLER_LIB_DIR}/libproxy_server_ios.a")
+elseif(EXISTS "${TOUCHCONTROLLER_LIB_DIR}/libproxy_server_ios_simulator.a")
+  message(STATUS "Found TouchController simulator library")
+  set(TOUCHCONTROLLER_LIB "${TOUCHCONTROLLER_LIB_DIR}/libproxy_server_ios_simulator.a")
+else()
+  message(STATUS "TouchController library not found, TouchController support will be disabled")
+  set(TOUCHCONTROLLER_LIB "")
+endif()
+# -------------------------------------------------------
+
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rpath @executable_path/Frameworks -rpath @loader_path/Frameworks")
 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -rpath @executable_path/Frameworks -rpath @loader_path/Frameworks")
 
@@ -174,6 +191,11 @@ add_executable(AngelAuraAmethyst
   input_bridge_v3.m
   ios_uikit_bridge.m
   utils.m
+  # ----- 添加 TouchController 源文件（原作者部分）-----
+  # TouchController bridge and preferences
+  TouchControllerBridge.m
+  TouchControllerPreferencesViewController.m
+  # -------------------------------------------------
 )
 
 if("${CMAKE_HOST_SYSTEM_NAME}" MATCHES "Linux|^GNU$|Android")
@@ -201,6 +223,9 @@ target_link_libraries(AngelAuraAmethyst
   "-framework UnzipKit"
   "-framework WebKit"
   "-weak_framework SafariServices"
+  # ----- 添加 TouchController 静态库链接（原作者部分）-----
+  ${TOUCHCONTROLLER_LIB}
+  # -------------------------------------------------
 )
 set_target_properties(AngelAuraAmethyst PROPERTIES
   MACOSX_BUNDLE TRUE
